# QualiSR-Lab

./: .gitignore  Dockerfile  LICENSE  README.md  THIRD_PARTY_NOTICES.md  environment.yml  new_README.md  pyproject.toml  regressors.ipynb  requirements.txt
configs/: default.json
dataset/: readme.md
features/: fr.csv  fr@grounding.csv  gaussian.csv  noise.csv  nr.csv  nr@grounding.csv  readme.md  resnet.csv  siglip.csv  stats@grounding.csv  uniform.csv
features/pca/: resnet@grounding_pca10.csv  resnet@grounding_pca25.csv  resnet@grounding_pca5.csv  resnet@grounding_pca50.csv  resnet_pca75.csv  vgg@grounding_pca5.csv  vgg@grounding_pca50.csv  vgg@grounding_pca75.csv  vgg_pca10.csv  vgg_pca25.csv
features/profiling/: fr_profile.csv  gaussian_profile.csv  nr_profile.csv  resnet_profile.csv  siglip_profile.csv  stats_profile.csv  uniform_profile.csv  vgg_profile.csv
plots/example@pca5/: config.json  correlations.csv  dataset_snapshot.csv
qualisr_lab/: cli.py  profiling.py  regressors.py
realtime_sr/RLFN/: rlfn-tuned-2x.pth
scores/: labels.csv
scripts/: apply_pca.py  get_image_features.py  make_reference.py  reproduce_pipeline.sh
